# text_search

./: .buildinfo  .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.txt  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.md
.github/workflows/: build-doc.yml  build-wheels.yml  linux-macos.yaml  linux.yaml
_sources/: index.rst.txt
_sources/install/: index.rst.txt
_sources/python-api/: index.rst.txt
_sources/tutorials/: index.rst.txt
cmake/: googletest.cmake  pybind11.cmake
docs/source/: conf.py  index.rst
docs/source/getting-started/: index.rst
docs/source/install/: developers.rst
docs/source/python-api/: index.rst
docs/source/python-api/code/: edit-distance.py  suffix-array.py
docs/source/tutorials/: find-close-matches.rst  index.rst  suffix-arrays.rst
docs/source/tutorials/code/: edit-distance.py  find-close-matches.py  suffix-array.py  suffix-arrays.py
examples/: prototype_usage.py
examples/libriheavy/: README.md  matching.py  matching_parallel.py  prepare_manifest.py  run.sh
examples/libriheavy/scripts/: clean.py  recording2book.py
examples/libriheavy/tools/: asr_datamodule.py  beam_search.py  calculate_overlap_ratio.py  cut_into_segment.py  decode_stream.py  merge_chunks.py  recognize.py  split_into_chunks.py  streaming_recognize.py  utils.py
examples/librilight/: README.md  download_text.py  matching.py  requirements.txt  run.sh
examples/subtitle/: matching.py  prepare_manifest.py  tools
getting-started/: index.html
install/: developers.html  index.html
python-api/: index.html
src/: np_alignment.py
textsearch/csrc/: CMakeLists.txt  edlib.cc  edlib.h  edlib_inl.h  edlib_test.cc  levenshtein.h  levenshtein_test.cc  match.cc  match.h  match_test.cc  pair_hash.h  suffix_array.cc  suffix_array.h  suffix_array_test.cc  utils.cc  utils.h  utils_test.cc
textsearch/python/: CMakeLists.txt
textsearch/python/csrc/: CMakeLists.txt  levenshtein.cc  levenshtein.h  match.cc  match.h  suffix_array.cc  suffix_array.h  text_search.cc  text_search.h  utils.cc  utils.h
textsearch/python/tests/: CMakeLists.txt  test_datatypes.py  test_find_close_matches.py  test_get_new2old.py  test_is_overlap.py  test_levenshtein_distance.py  test_match.py  test_row_ids_to_row_splits.py  test_sourced_text.py  test_suffix_array.py  test_text_source.py  test_transcript.py
textsearch/python/textsearch/: __init__.py  datatypes.py  levenshtein.py  match.py  suffix_array.py  text_search.py  utils.py
tutorials/: find-close-matches.html  index.html  suffix-arrays.html
